@@ -461,12 +461,18 @@ AC_REQUIRE([AC_PATH_QT])dnl
 AC_MSG_CHECKING([for KDE])
 
 if test "${prefix}" != NONE; then
-  kde_libraries=${prefix}/lib
   kde_includes=${prefix}/include
-  ac_kde_libraries=$prefix/lib
   ac_kde_includes=$prefix/include
+
+  if test "${exec_prefix}" != NONE; then
+    kde_libraries=${exec_prefix}/lib
+    ac_kde_libraries=$exec_prefix/lib
+  else
+    kde_libraries=${prefix}/lib
+    ac_kde_libraries=$prefix/lib
+  fi
 else
-  ac_kde_includes= 
+  ac_kde_includes=
   ac_kde_libraries=
   kde_libraries=""
   kde_includes=""
@@ -482,7 +488,7 @@ test -n "$KDEDIR" && kde_incdirs="$KDEDIR/include $KDEDIR $kde_incdirs"
 AC_FIND_FILE(ksock.h, $kde_incdirs, kde_incdir)
 if test -n "$ac_kde_includes" && test ! -r "$ac_kde_includes/ksock.h"; then
   AC_MSG_ERROR([
-in the prefix, you've choosen, are no kde headers installed. This will fail.
+in the prefix, you've chosen, are no kde headers installed. This will fail.
 So, check this please and use another prefix!])
 fi
 ac_kde_includes=$kde_incdir
@@ -493,7 +499,7 @@ AC_FIND_FILE(libkdecore.la, $kde_libdirs, kde_libdir)
 
 if test -n "$ac_kde_libraries" && test ! -r "$ac_kde_libraries/libkdecore.la"; then
 AC_MSG_ERROR([
-in the prefix, you've choosen, are no kde libraries installed. This will fail.
+in the prefix, you've chosen, are no kde libraries installed. This will fail.
 So, check this please and use another prefix!])
 fi
 ac_kde_libraries=$kde_libdir
